--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,7 @@
 <resources>
     <string name="app_name">Punk Beers</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="place_holder_text">Lorem ipsum</string>
     <string name="place_holder_text_long">orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
@@ -17,4 +10,9 @@
     <string name="label_beer_ebc">EBC</string>
     <string name="label_beer_srm">SRM</string>
     <string name="desc_beer_image">Beer image</string>
+    <string name="help_header">What does these terminologies mean?</string>
+    <string name="help_abv">ABV (Alcohol by volume): It is a standard measure of how much alcohol is contained in a given volume of an alcoholic beverage.</string>
+    <string name="help_ibu">IBU (International Bitterness Unit):  It is used to approximately quantify the bitterness of beer.</string>
+    <string name="help_ebc">EBC (European Brewery Convention): It is a measurement of colour of a beer. One EBC corresponds to 1 ml of iodine in 100 ml of water.</string>
+    <string name="help_srm">SRM (Standard Reference Method): It is the US color system used by brewers to specify finished beer and malt color.</string>
 </resources>
